--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Merriweather:wght@300;900&display=swap');
 
 .top-container {
-background-color:#EBDCC9;
+background-color:#1b583f;
+text-align: center;
 position:relative;
 padding-top:20px;
 padding-bottom: 20px;
@@ -10,7 +11,7 @@ padding-bottom: 20px;
 
 body {
     margin:0;
-    text-align:center;
+    text-align:left;
     font-family: 'Alfa Slab One', cursive;
     font-size:20px;
     color:black;
@@ -18,7 +19,7 @@ body {
 
 .headings {
     font-family: 'Merriweather', serif;
-    color:#6d4c41
+    color:#7fa595
 }
 
 .middle-container {
@@ -48,7 +49,7 @@ body {
 }
 
 .bottom-container {
-    background-color:#8d6e63;
+    background-color:#1b583f;
     margin:0;
     text-align:center;
     font-family: 'Merriweather', serif;
@@ -67,45 +68,87 @@ body {
 }
 
 
+* {box-sizing:border-box}
+
 /* Slideshow container */
 .slideshow-container {
-    max-width: 800px;
-    position: relative;
-    margin: auto;
-  }
-  
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .active, .dot:hover {
-    background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
 
-   /* Footer */
-  .footer-link {
-    color:white;
-    margin:10px 20px;
-    font-family: 'Merriweather', serif;
-    text-decoration: none;
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
 
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 
