--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,12 @@ body {
     color:#7fa595
 }
 
+
+img{
+  max-width: 900px;
+  max-height: 700px;
+}
+
 .middle-container {
     margin: auto;
     text-align:center;
@@ -57,6 +63,7 @@ body {
     padding-top:20px;
 }
 
+
 .project {
     display: flex;
     justify-content:center;
@@ -73,6 +80,7 @@ body {
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
+  text-align: center;
   position: relative;
   margin: auto;
 }
@@ -90,6 +98,29 @@ body {
   width: auto;
   margin-top: -22px;
   padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
   color: white;
   font-weight: bold;
   font-size: 18px;
@@ -129,6 +160,18 @@ body {
   top: 0;
 }
 
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
 .active, .dot:hover {
   background-color: #717171;
 }
@@ -149,6 +192,11 @@ body {
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
 }
 
 
